<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Long Weekend</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="longWeekend">Get Long Weekend</string>
    <string name="yourDate">2013-09-12</string>
    <string name="holidaysFrom">Get Holidays From</string>
    <string name="holidaysBetween">Get Holidays Between</string>
    <string name="startDate">2012-01-01</string>
    <string name="endDate">2012-08-12</string>
    <string name="longweekendMessage">Enter a date in the format YYYY-MM-DD and click the button to get the closest long weekend to this date</string>
    <string name="startDateMessage">Start Date:</string>
    <string name="endDateMessage">End Date:</string>
    <string name="beginDate">2012-11-11</string>
    <string name="holidayfromMessage">Enter the date in the format YYYY-MM-DD and click the button to get the holidays from the specified date</string>
    <string name="holidaysbetweenMessage">Enter the dates in the format YYYY-MM-DD and click the button to get the holidays between the specified dates</string>

</resources>
